--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-napalm-ros = {editable = true,path = "."}
+napalm-ubiquiti-airos = {editable = true,path = "."}
 pytest = "*"
 pylama = "*"
 yapf = "*"
@@ -15,4 +15,4 @@ mock = "*"
 pylint = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
