--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ install:
 - pip install -r requirements-dev.txt
 - pip install .
 - pip install -e git+https://github.com/napalm-automation/napalm.git@develop#egg=napalm
+script:
+- py.test
